--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     startCommand: npm start
     envVars:
       - key: OPENAI_API_KEY
-        value: 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
+        value: 
       - key: CHANNELS
         value: xulaniec
       - key: GPT_MODE
